hphp/test/zend/good/ext/standard/tests/file/mkdir_rmdir_variation2.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (substr(PHP_OS, 0, 3) == 'WIN') {
    die('skip.. only on LINUX');
}
// Skip if being run by root (files are always readable, writeable and executable)
if (posix_geteuid() == 0) {
    die('skip cannot be run as root');
}
}
